--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 \newpage
 \section*{Examples}
 % \subsection*{Introduction}
-The main goal for this task is......
+The main goal for this task is........
 
 
 \subsection*{The problem}
