--- a/code/workbench_andreas.ipynb
+++ b/code/workbench_andreas.ipynb
@@ -10,7 +10,6 @@
     "import matplotlib.pyplot as plt\r\n",
     "import seaborn as sns\r\n",
     "import os\r\n",
-    "import common\r\n",
     "from common import *\r\n",
     "import pandas as pd"
    ],
@@ -168,7 +167,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x16808663040>"
+       "<matplotlib.legend.Legend at 0x23a73383400>"
       ]
      },
      "metadata": {},
@@ -231,7 +230,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x168093b5c40>"
+       "<matplotlib.legend.Legend at 0x23a740d6ca0>"
       ]
      },
      "metadata": {},
@@ -270,7 +269,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1680974dbb0>"
+       "<matplotlib.legend.Legend at 0x23a73306ca0>"
       ]
      },
      "metadata": {},
@@ -300,12 +299,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "source": [
     "#The following simple Python instructions define our x and y values (with 100 data points).\r\n",
     "np.random.seed(3155)\r\n",
     "x = np.random.rand(100)\r\n",
-    "y = 2.0+5*x*x+0.1*np.random.randn(100)\r\n",
+    "y = 2.0+5*x*x+0.1*np.random.randn(100) # Second order polynomial with noise\r\n",
     "p = 3 # polynomial degree / number of features\r\n",
     "scale = True\r\n",
     "\r\n",
@@ -314,14 +313,31 @@
     "                                                features=p, \r\n",
     "                                                test_size=0.2, \r\n",
     "                                                shuffle=True, \r\n",
-    "                                                scale=scale)\r\n"
+    "                                                scale=scale)\r\n",
+    "print(f\"X_train.shape:{X_train.shape}\")\r\n",
+    "print(f\"X_test.shape:{X_test.shape}\")\r\n",
+    "\r\n",
+    "# Creating dataframes of the data\r\n",
+    "X_train_df = pd.DataFrame(X_train, columns=[f\"x{f}\" for f in np.arange(p)])\r\n",
+    "y_train_df = pd.DataFrame(y_train, columns=[\"y\"])\r\n",
+    "X_test_df = pd.DataFrame(X_test, columns=[f\"x{f}\" for f in np.arange(p)])\r\n",
+    "y_test_df = pd.DataFrame(y_test, columns=[\"y\"])"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "X_train.shape:(80, 3)\n",
+      "X_test.shape:(20, 3)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "source": [
     "# OLS / Linear Regression\r\n",
     "## Instansiate the model\r\n",
@@ -345,9 +361,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Training R2 for OLS: 11.653013576769258\n",
+      "Training R2 for OLS: -5.641100205690805\n",
       "Training MSE for OLS: 11.653013576769258\n",
-      "Test R2 for OLS: 11.556776634388934\n",
+      "Test R2 for OLS: -4.446496814456553\n",
       "Test MSE OLS: 11.556776634388934\n"
      ]
     }
@@ -357,7 +373,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "# Ridge regression\r\n",
+    "nbf_lambdas = 20\r\n",
+    "y_hat_train_list = [pd.DataFrame()] * nbf_lambdas\r\n",
+    "y_hat_test_list = [pd.DataFrame()] * nbf_lambdas\r\n",
+    "\r\n",
+    "for i in np.arange(nbf_lambdas):\r\n",
+    "    model = RidgeRegression() # Instansiate the model\r\n",
+    "    model.fit(X_train, y_train, i) # Training the model\r\n",
+    "   \r\n",
+    "    # Predictions\r\n",
+    "    y_hat_train = model.predict(X_train) # predict on train data\r\n",
+    "    y_hat_test = model.predict(X_test) # predict on test data\r\n",
+    "    \r\n",
+    "    # Filling up dataframes\r\n",
+    "    \r\n",
+    "    \r\n",
+    "    y_hat_train_df[f\"y\"] = y_hat_train.flatten()\r\n",
+    "    y_hat_test_df[f\"y\"] = y_hat_test.flatten()\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "MSEPredict = np.zeros(nlambdas)\r\n",
+    "MSETrain = np.zeros(nlambdas)\r\n",
+    "lambdas = np.logspace(-4, 1, nlambdas)\r\n",
+    "for i in range(nlambdas):\r\n",
+    "    lmb = lambdas[i]\r\n",
+    "    Ridgebeta = np.linalg.inv(X_train.T @ X_train+lmb*I) @ X_train.T @ y_train\r\n",
+    "    # and then make the prediction\r\n",
+    "    ytildeRidge = X_train @ Ridgebeta\r\n",
+    "    ypredictRidge = X_test @ Ridgebeta\r\n",
+    "    MSEPredict[i] = MSE(y_test,ypredictRidge)\r\n",
+    "    MSETrain[i] = MSE(y_train,ytildeRidge)\r\n",
+    "# Now plot the results\r\n",
+    "plt.figure()\r\n",
+    "plt.plot(np.log10(lambdas), MSETrain, label = 'MSE Ridge train')\r\n",
+    "plt.plot(np.log10(lambdas), MSEPredict, 'r--', label = 'MSE Ridge Test')\r\n",
+    "plt.xlabel('log10(lambda)')\r\n",
+    "plt.ylabel('MSE')\r\n",
+    "plt.legend()\r\n",
+    "plt.show()"
+   ],
    "outputs": [],
    "metadata": {}
   }
