--- a/code/workbench_andreas.ipynb
+++ b/code/workbench_andreas.ipynb
@@ -1046,7 +1046,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit (system)"
+   "display_name": "Python 3.8.11 64-bit ('pytorch_lightning': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1061,7 +1061,7 @@
    "version": "3.8.11"
   },
   "interpreter": {
-   "hash": "4100b45d1ec7c24b8fe1569d39871ffb9fcc213dcc50046fc68fe247fbf6e84f"
+   "hash": "cdd16a4e159c1067d9dfa51729b478ccc85a4bb59359633d71fef71fb1a46b1f"
   }
  },
  "nbformat": 4,
