--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -83,7 +83,7 @@
     "z_noisy = z + noise_mesh\r\n",
     "\r\n",
     "fig = plt.figure()\r\n",
-    "ax = fig.add_subplot(1,2,1, projection='3d')\r\n",
+    "ax = fig.add_subplot(1,2,1, projection='3d') # Are :)steike\r\n",
     "\r\n",
     "#ax = plt.axes(projection='3d')\r\n",
     "ax.title.set_text(\"Plot of the Franke Function\")\r\n",
