--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -14,14 +14,25 @@
     "import pandas as pd\r\n",
     "#from mpl_toolkits.mplot3d import Axes3D\r\n",
     "from sklearn.linear_model import Lasso, Ridge, LinearRegression\r\n",
-    "%matplotlib "
+    "\r\n",
+    "os.chdir(\"../\")\r\n",
+    "print(f\"Root directory: {os.getcwd()}\")\r\n",
+    "\r\n",
+    "plt.rcParams.update({\r\n",
+    "    \"text.usetex\": True,\r\n",
+    "    \"font.family\": \"serif\",\r\n",
+    "    \"font.serif\": [\"Palatino\"],\r\n",
+    "    \"font.size\": 10,\r\n",
+    "})\r\n",
+    "\r\n",
+    "%matplotlib inline "
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Using matplotlib backend: Qt5Agg\n"
+      "Root directory: c:\\Users\\andre\\Dropbox\\FYS-STK4155_projects\\FYS-STK4155 - Project1\\FYS-STK4155-Prj1_report\n"
      ]
     }
    ],
@@ -30,7 +41,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### System preferences"
+    "### Global variables "
    ],
    "metadata": {
     "tags": []
@@ -40,26 +51,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "%matplotlib inline \r\n",
-    "#os.chdir(\"../\")\r\n",
-    "print(f\"Root directory: {os.getcwd()}\")\r\n",
-    "\r\n",
-    "plt.rcParams.update({\r\n",
-    "    \"text.usetex\": True,\r\n",
-    "    \"font.family\": \"serif\",\r\n",
-    "    \"font.serif\": [\"Palatino\"],\r\n",
-    "    \"font.size\": 10,\r\n",
-    "})"
+    "INPUT_DATA = \"data/input_data/\"  # Path for input data\r\n",
+    "REPORT_DATA = \"data/report_data/\" # Path for data ment for the report\r\n",
+    "REPORT_FIGURES = \"figures/\" # Path for figures ment for the report"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Root directory: c:\\Users\\andre\\Dropbox\\FYS-STK4155_H21\\projects\\prj1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -96,7 +92,7 @@
     "ax.view_init(elev=30., azim=-25.0)\r\n",
     "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
     "surf = ax.plot_surface(x,y,z_noisy, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\r\n",
-    "plt.savefig(\"franke_function_preview.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_preview.pdf\")"
    ],
    "outputs": [
     {
@@ -120,7 +116,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "n = 2000\r\n",
+    "n = 2000 # The number of point in the franke function\r\n",
     "x = np.random.rand(n)\r\n",
     "y = np.random.rand(n)\r\n",
     "z = FrankeFunction(x, y) \r\n",
@@ -140,21 +136,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "def randrange(n, vmin, vmax):\r\n",
     "    return (vmax - vmin)*np.random.rand(n) + vmin\r\n",
     "\r\n",
     "fig = plt.figure(figsize=(8,8))\r\n",
     "degrees = 6\r\n",
+    "z_train_OLS = pd.DataFrame()\r\n",
+    "z_hat_train_OLS = pd.DataFrame()\r\n",
+    "\r\n",
+    "# TODO: Must fix so that training and test data are used. \r\n",
+    "# Must evalute model using MSE from traning and test\r\n",
     "for degree in range(1, degrees + 1):\r\n",
     "    X = create_X(x, y, degree) # Design Matrix\r\n",
+    "    \r\n",
+    "    # TODO: insert train_test_split with seed\r\n",
+    "    \r\n",
     "    model = OLS() # The model\r\n",
     "    model.fit(X, z) # Fitting the model\r\n",
-    "    z_hat = model.predict(X) # Predicting z_hat values\r\n",
+    "    z_hat = model.predict(X) # Predicting z_hat values in traning data\r\n",
     "\r\n",
     "    # Evaluatation metrics\r\n",
     "    # TODO:\r\n",
+    "    \r\n",
+    "    # Filling up dataframes\r\n",
+    "    z_train_OLS[degree] = z.flatten() \r\n",
+    "    z_hat_train_OLS[degree] = z_hat.flatten()\r\n",
+    "\r\n",
     "    zs = randrange(n, 0, 50)\r\n",
     "    # Plot\r\n",
     "    ax = fig.add_subplot(3,2, degree, projection='3d')\r\n",
@@ -164,7 +173,7 @@
     "    ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\r\n",
     "fig.suptitle(\"OLS fit to the Franke Function\")\r\n",
     "plt.tight_layout()\r\n",
-    "plt.savefig(\"franke_function_fit_OLS.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_fit_OLS.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "source": [
     "features = 6\r\n",
     "#x = np.arange(0, 1, 0.05)\r\n",
@@ -194,15 +203,15 @@
     "\r\n",
     "X = create_X(x, y, n=features) # Design Matrix\r\n",
     "z = FrankeFunction(x,y)\r\n",
-    "nbf_lambdas = 20\r\n",
-    "lambdas = np.logspace(-1,2, nbf_lambdas)\r\n",
-    "z_train_df = pd.DataFrame()\r\n",
-    "z_hat_train_df = pd.DataFrame()\r\n",
-    "z_test_df = pd.DataFrame()\r\n",
-    "z_hat_test_df = pd.DataFrame()\r\n",
+    "z += noise\r\n",
+    "nbf_lambdas = 300\r\n",
+    "lambdas = np.logspace(-6,6, nbf_lambdas)\r\n",
+    "z_train_ridge = pd.DataFrame()\r\n",
+    "z_hat_train_ridge = pd.DataFrame()\r\n",
+    "z_test_ridge = pd.DataFrame()\r\n",
+    "z_hat_test_ridge = pd.DataFrame()\r\n",
     "\r\n",
     "for lam in lambdas:\r\n",
-    "        \r\n",
     "    X_train, X_test, z_train, z_test = train_test_split(X,z, test_size=0.2, shuffle=True)\r\n",
     "    model = RidgeRegression(lam) # The model\r\n",
     "    model.fit(X_train, z_train) # Fitting the model\r\n",
@@ -210,45 +219,61 @@
     "    # Predictions\r\n",
     "    z_hat_train = model.predict(X_train) # predict on train data\r\n",
     "    z_hat_test = model.predict(X_test) # predict on test data\r\n",
-    "    \r\n",
-    "\r\n",
     "\r\n",
     "    # Filling up dataframes\r\n",
-    "    #z_train_df[f\"lambda_{lam}\"] = z_train.flatten() \r\n",
-    "    #z_hat_train_df[f\"lambda_{lam}\"] = z_hat_train.flatten()\r\n",
-    "    #z_test_df[f\"lambda_{lam}\"] = z_test.flatten()\r\n",
-    "    #z_hat_test_df[f\"lambda_{lam}\"] = z_hat_test.flatten()\r\n",
-    "\r\n",
-    "    z_train_df[lam] = z_train.flatten() \r\n",
-    "    z_hat_train_df[lam] = z_hat_train.flatten()\r\n",
-    "    z_test_df[lam] = z_test.flatten()\r\n",
-    "    z_hat_test_df[lam] = z_hat_test.flatten()\r\n",
+    "    z_train_ridge[lam] = z_train.flatten() \r\n",
+    "    z_hat_train_ridge[lam] = z_hat_train.flatten()\r\n",
+    "    z_test_ridge[lam] = z_test.flatten()\r\n",
+    "    z_hat_test_ridge[lam] = z_hat_test.flatten()\r\n",
     "\r\n",
     "\r\n",
-    "    \r\n",
     "# MSE calculations for all lambda values\r\n",
-    "mse_scores_train = ((z_train_df - z_hat_train_df) ** 2).mean()\r\n",
-    "mse_scores_test = ((z_test_df - z_hat_test_df) ** 2).mean()\r\n",
+    "mse_scores_train = ((z_train_ridge - z_hat_train_ridge) ** 2).mean()\r\n",
+    "mse_scores_test = ((z_test_ridge - z_hat_test_ridge) ** 2).mean()\r\n",
     "# R2 calculations for all lambda values\r\n",
-    "R2_scores_train = 1 - ((z_train_df - z_hat_train_df) ** 2).sum() / ((z_train_df - z_train_df.mean())**2).sum() \r\n",
-    "R2_scores_test = 1 - ((z_test_df - z_hat_test_df) ** 2).sum() / ((z_test_df - z_test_df.mean())**2).sum()  \r\n",
+    "R2_scores_train = 1 - ((z_train_ridge - z_hat_train_ridge) ** 2).sum() / ((z_train_ridge - z_train_ridge.mean())**2).sum() \r\n",
+    "R2_scores_test = 1 - ((z_test_ridge - z_hat_test_ridge) ** 2).sum() / ((z_test_ridge - z_test_ridge.mean())**2).sum()  \r\n",
     "\r\n",
     "# Plots\r\n",
     "plt.figure(figsize=(12,8))\r\n",
-    "plt.plot(np.log(lambdas), mse_scores_train, label=\"Training data\")\r\n",
-    "plt.plot(np.log(lambdas), mse_scores_test, label=\"Test data\")\r\n",
+    "plt.plot(-np.log(lambdas), mse_scores_train, label=\"Training data\")\r\n",
+    "plt.plot(-np.log(lambdas), mse_scores_test, label=\"Test data\")\r\n",
+    "#plt.plot(mse_scores_train,-np.log(lambdas), label=\"Training data\")\r\n",
+    "#plt.plot(mse_scores_test,-np.log(lambdas), label=\"Test data\")\r\n",
     "plt.xlabel(\"log(lambda)\")\r\n",
     "plt.ylabel(\"MSE\")\r\n",
     "plt.title(\"Training evaluation on Ridge regression fit\")\r\n",
     "plt.legend()\r\n",
-    "plt.savefig(\"Franke Function Ridge fit evaluation.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}Franke Function Ridge fit evaluation.pdf\")"
    ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-7-50920c0e358f>:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  z_train_ridge[lam] = z_train.flatten()\n",
+      "<ipython-input-7-50920c0e358f>:26: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  z_hat_train_ridge[lam] = z_hat_train.flatten()\n",
+      "<ipython-input-7-50920c0e358f>:27: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  z_test_ridge[lam] = z_test.flatten()\n",
+      "<ipython-input-7-50920c0e358f>:28: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  z_hat_test_ridge[lam] = z_hat_test.flatten()\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "source": [
     "lam = -1.1\r\n",
     "model = RidgeRegression(lam) # The model\r\n",
@@ -259,6 +284,10 @@
     "\r\n",
     "# Evaluatation metrics\r\n",
     "# TODO:\r\n",
+    "results_df = pd.DataFrame(columns=[\"MSE\", \"R2-score\"], index=[\"Training data\", \"Test data\"])\r\n",
+    "results_df[\"MSE\"] = MSE(z, z_hat)\r\n",
+    "results_df[\"R2-score\"] = R2(z, z_hat)\r\n",
+    "results_df.to_csv(f\"{REPORT_DATA}redge_reg_lambda_{lam}.csv\")\r\n",
     "\r\n",
     "# Plot\r\n",
     "fig = plt.figure()#figsize=(8,8))\r\n",
@@ -268,7 +297,7 @@
     "ax.view_init(elev=30., azim=-25.0)\r\n",
     "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
     "ax.scatter3D(x,y,z,c=z, cmap=cm.coolwarm, marker = '.')\r\n",
-    "plt.savefig(\"franke_function_Ridge_fit.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_Ridge_fit.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -291,7 +320,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('pytorch_lightning': conda)"
+   "display_name": "Python 3.8.11 64-bit ('pytorch1': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -306,7 +335,7 @@
    "version": "3.8.11"
   },
   "interpreter": {
-   "hash": "cdd16a4e159c1067d9dfa51729b478ccc85a4bb59359633d71fef71fb1a46b1f"
+   "hash": "4100b45d1ec7c24b8fe1569d39871ffb9fcc213dcc50046fc68fe247fbf6e84f"
   }
  },
  "nbformat": 4,
